<resources>
    <string name="log_out_from_app" translatable="false">Uygulamadan başarıyla çıkış yapıldı!</string>
    <string name="ask_need">Lütfen bir ihtiyaç giriniz</string>
    <string name="already_reserved">önceden rezerve yaptı</string>
    <string name="will_buy">alacak</string>
    <string name="reserved">alacak</string>
    <string name="remove_group">GRUBU SİL</string>
    <string name="add_friends_to_group">Arkadaş Ekle</string>
    <string name="cancel">Karşılamayı iptal et</string>
    <string name="added">ekledi</string>
    <string name="app_name">PlanSplit</string>
    <string name="select_language">Dil Seçiniz</string>
    <string name="title_friends" translatable="false">Arkadaşlar</string>
    <string name="title_personal" translatable="false">Kişisel</string>
    <string name="title_notifications" translatable="false">Bildirimler</string>
    <string name="title_groups" translatable="false">Gruplar</string>
    <string name="title_settings" translatable="false">Ayarlar</string>
    <string name="title_change_language" translatable="false">Dili Değiştir</string>
    <string name="title_contact" translatable="false">İletişim</string>
    <string name="title_rate" translatable="false">Puan Ver</string>
    <string name="title_home" translatable="false">Anasayfa</string>
    <string name="header_user_name" translatable="false">Albert Einstein</string>
    <string name="header_gmail" translatable="false"> albertenisten@gmail.com</string>
    <string name="header_profile_button" translatable="false">Profil</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="title_app" translatable="false">Plan &amp; Split</string>
    <string name="group_title" translatable="false">Grup İsmi</string>
    <string name="write_group_name" translatable="false">Grup ismi yazınız</string>
    <string name="group_operations" translatable="false">Grup İşlemleri</string>
    <string name="group_settings" translatable="false">Grup Ayarları</string>
    <string name="create_group" translatable="false">GRUBU OLUŞTUR</string>
    <string name="group_members" translatable="false">Grup Üyeleri</string>
    <string name="add_friends_in_group" translatable="false">Gruba arkadaş ekle</string>
    <string name="please_give_group_name" translatable="false">Lütfen grup ismi giriniz</string>
    <string name="current_dept_status" translatable="false">Güncel Borç Bilgisi</string>
    <string name="enter_amount" translatable="false">Miktarı Girin</string>
    <string-array name="shareMethodSpinnerItems">
        <item>Eşit paylaşım</item>
        <item>Düzensiz paylaşım</item>
        <item>Yüzdeliğe göre paylaşım</item>
        <item>Paya göre paylaşım</item>
        <item>Fazlalığa göre paylaşım</item>
    </string-array>
    <string-array name="expenseSpinnerItems">
        <item>yiyecek</item>
        <item>giyecek</item>
        <item>kırtasiye</item>
        <item>temizlik</item>
        <item>diğer</item>
    </string-array>
    <string name="equal_sharing" translatable="false">Eşit Paylaşım</string>
    <string name="personal_debt" translatable="false">Borç</string>
    <string name="personal_due" translatable="false">Alacak</string>
    <string name="total" translatable="false">Toplam</string>
    <string name="expense_desc" translatable="false">Harcama Açıklaması</string>
    <string name="expense_count" translatable="false">Harcama Miktarı</string>
    <string name="expense_total" translatable="false">Harcama Toplamı :</string>
    <string name="expenses" translatable="false">Harcamalar</string>
    <string name="title_remaining_budget" translatable="false">Kalan Bütçe :</string>
    <string name="add_expense" translatable="false">Harcama Ekle</string>
    <string name="payer" translatable="false">Ödeyen</string>
    <string name="payer_selector" translatable="false">Ödeyen(Siz)</string>
    <string name="expense_type_selector" translatable="false">Harcama Tipi </string>
    <string name="partition_method" translatable="false">Paylaşma Yöntemi</string>
    <string name="save" translatable="false">Kaydet</string>
    <string name="persons_groups" translatable="false">Kişiler veya Gruplar:</string>
    <string name="persons_groups_inexpense" translatable="false">Harcamaya dahil olan kişiler veya grupları seçiniz</string>
    <string name="calendar" translatable="false">Takvim</string>
    <string name="note" translatable="false">Not</string>
    <string name="title_logout" translatable="false">Çıkış Yap</string>
    <string name="friend_amount_user_owes" translatable="false">Borçlusun</string>
    <string name="friend_amount_friend_owes" translatable="false">Borçlu</string>
    <string name="group_events_object_depth_status_owes" translatable="false">Borçlusun</string>
    <string name="group_events_object_depth_status_claimant" translatable="false">Alacaklısın</string>
    <string name="group_events_object_payOrpayed_payed" translatable="false">TL ödedi</string>
    <string name="group_events_object_payOrpayed_pay" translatable="false">TL ödedin</string>
    <string name="list" translatable="false">Liste</string>
    <string name="events" translatable="false">Olaylar</string>
    <string name="as_table_export" translatable="false">Tablo Olarak Çıkar</string>
    <string name="quick_add" translatable="false">Hızlı Ekle</string>
    <string name="enter_mail_address" translatable="false">mail adresini giriniz</string>
    <string name="requirement_list" translatable="false">İhtiyaç Listesi</string>
    <string name="requierement_desc" translatable="false">İhtiyaç Tanımı</string>
    <string name="added_by" translatable="false">Curie ekledi</string>
    <string name="purchased_by" translatable="false">Einstein alacak</string>
    <string name="waiting" translatable="false">Bekliyor</string>
    <string name="add_requierement" translatable="false">İhtiyaç ekleyiniz</string>
    <string name="back" translatable="false">Geri Dön</string>
    <string name="resp_question" translatable="false">Bu ihtiyacı karşılamak istiyor musunuz?</string>
    <string name="cancel_resp" translatable="false">Bu ihtiyacı ödemek istiyor musunuz?</string>
    <string name="yes" translatable="false">Evet</string>
    <string name="enter_note" translatable="false">enter note</string>
    <string name="group_expense_note_dialog_title" translatable="false">Not Ekle</string>
    <string name="group_expense_note_dialog_negative" translatable="false">Geri</string>
    <string name="group_expense_note_dialog_positive" translatable="false">Kaydet</string>
    <string name="select_payer" translatable="false">Ödeyen</string>
    <string name="select_date" translatable="false">Tarih Seç</string>
    <string name="date_picker_menu_for_once" translatable="false">Tek Seferlik</string>
    <string name="date_picker_menu_weekly_repeat" translatable="false">Haftalık</string>
    <string name="date_picker_menu_monthly_repeat" translatable="false">Aylık</string>
    <string name="date_picker_menu_yearly_repeat" translatable="false">Yıllık</string>
    <string name="remove_friend" translatable="false">Sil</string>
    <string name="pay" translatable="false">Ödeme yap</string>
    <string name="home" translatable="false">Ev</string>
    <string name="trip" translatable="false">Seyahat</string>
    <string name="work" translatable="false">İş</string>
    <string name="other" translatable="false">Diğer</string>
    <string name="title_wear" translatable="false">giyecek</string>
    <string name="title_food" translatable="false">yiyecek</string>
    <string name="title_others" translatable="false">diğer</string>
    <string name="title_stationery" translatable="false">kırtasiye</string>
    <string name="title_hygiene" translatable="false">temizlik</string>
    <string name="title_all" translatable="false">hepsi</string>
    <string name="add_budget_text" translatable="false">Lütfen Aylık Bütçenizi Giriniz.</string>
    <string name="isim_giriniz" translatable="false">İsim giriniz</string>
    <string name="select_friends" translatable="false">Lütfen arkadaş seçiniz</string>
    <string name="title_house" translatable="false">ev</string>
    <string name="title_travel" translatable="false">seyehat</string>
    <string name="title_business" translatable="false">iş</string>
    <string name="tl_sign" translatable="false">TL </string>

    <string name="add_expense_price" translatable="false">fiyat</string>
    <string name="personalfragment_moneyleft" translatable="false">Kalan Bütce :</string>

    <string-array name="expensePersonalItems">
        <item>yiyecek</item>
        <item>giyecek</item>
        <item>kırtasiye</item>
        <item>temizlik</item>
        <item>diğer</item>
    </string-array>

    <string name="total_dept" translatable="false">Toplam Borcunuz : </string>
    <string name="total_dept_0" translatable="false">Toplam Borcunuz : 0 TL</string>
    <string name="total_claimant" translatable="false">Toplam Alacağınız : </string>

    <string name="add_friend" translatable="false">Arkadaş Ekle</string>
    <string name="friend_removed" translatable="false">Arkadaş silindi</string>

    <string name="add_new_group" translatable="false">YENİ GRUP EKLE</string>
    <string name="title_expenses" translatable="false">Harcamalar</string>
    <string name="title_debts">borçlar</string>
    <string name="group_totalExpense">Grup Harcama Toplamları</string>
    <string name="fromGroupDelete">adlı kişiyi gruptan çıkar</string>
    <string name="fromGroupDeleted">adlı kişiyi gruptan çıkarıldı</string>
    <string name="successfullyAdded" translatable="false">Başarıyla eklendi</string>
    <string name="changes_saved_successfully" translatable="false">Değişiklikler başarıyla kaydedildi</string>
    <string name="wrong_entry" translatable="false">Hatalı Girdi</string>

    <string name="remaining_budget">%1$d TL</string>
    <string name="budget">%1$d TL</string>
    <string name="monthly_saving">Önceki ayki tasarruf: %1$d TL</string>

    <!-- notifications -->
    <!-- personal notifications -->
    <string name="you_have_entered_more_money_than_you_owe" translatable="false">Borcunuzdan fazla para miktarı girdiniz!</string>
    <string name="notification_over_budget">Aylık bütçenizi aştınız</string>
    <string name="notification_budget_change">Bütçenizi değiştirdiniz</string>
    <string name="notification_friend_add">%1$s ile arkadaş oldunuz</string>
    <string name="notification_friend_remove">%1$s ile artık arkadaş değilsiniz</string>
    <string name="notification_group_add">%1$s grubuna katıldınız</string>
    <string name="notification_group_remove">%1$s grubundan ayrıldınız</string>
    <string name="notification_monthly_expense">Bu aylık harcamanız:</string>
    <!-- friend notifications -->
    <string name="notification_friend_monthly_expense">Bu aylık harcamanız:</string>
    <string name="group_delete_alert">Grubu silmek istediğinizden emin misiniz?</string>
    <string name="no">Hayır</string>
</resources>
