<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_baseline_mail_24"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/navigation_rate"
        android:icon="@drawable/ic_baseline_thumb_up_24"
        android:title="@string/title_rate" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/title_logout" />

</menu>