<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mygroup_group_navi"
    app:startDestination="@+id/navi_events">

    <fragment
        android:id="@+id/navi_events"
        android:name="com.example.plansplit.ui.mygroup.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navi_operation"
        android:label="@string/group_operations"
        android:name="com.example.plansplit.ui.mygroup.GroupOperationsFragment"
        tools:layout="@layout/fragment_group_operations" />

    <fragment
        android:id="@+id/navi_todo_list"
        android:label="@string/list"
        android:name="com.example.plansplit.ui.mygroup.ListFragment"
        tools:layout="@layout/fragment_list" />

</navigation>