<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/line_grey"
        android:elevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/expense_desc"
        android:textColor="@color/shadow_text"
        app:layout_constraintBottom_toBottomOf="@+id/exp_symbolIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/exp_symbolIv"
        app:layout_constraintTop_toTopOf="@+id/exp_symbolIv" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/expense_count"
        android:textColor="@color/shadow_text"
        app:layout_constraintBottom_toBottomOf="@+id/exp_count_symbolIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exp_count_symbolIv"
        app:layout_constraintTop_toTopOf="@+id/exp_count_symbolIv" />

    <ImageView
        android:id="@+id/exp_symbolIv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_fatura_iconu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageView
        android:id="@+id/exp_count_symbolIv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_para_birimi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exp_symbolIv" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/payer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exp_count_symbolIv" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partition_method"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/payer_button"
        android:layout_width="146dp"
        android:layout_height="30dp"
        android:background="@drawable/expense_button"
        android:fontFamily="@font/avenir"
        android:text="@string/payer"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/method_button"
        android:layout_width="146dp"
        android:layout_height="30dp"
        android:background="@drawable/expense_button"
        android:fontFamily="@font/avenir"
        android:text="@string/partition_method"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/payer_button"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="@+id/payer_button"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button2"
        android:fontFamily="@font/avenir"
        android:text="@string/save"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/persons_groupsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/avenir"
        android:text="@string/persons_groups"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_height="wrap_content"
        android:layout_width="268dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/persons_groups_inexpense"
        android:textColor="@color/grey"
        android:textSize="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/persons_groupsTv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/camera_button"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
        app:srcCompat="@drawable/ic_camera" />

    <Button
        android:id="@+id/noteButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/calendar_button"
        android:drawableLeft="@drawable/ic_noun_note"
        android:fontFamily="@font/avenir"
        android:text="@string/note"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/calendarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calendarButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/calendar_button"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        android:fontFamily="@font/avenir"
        android:text="@string/calendar"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/noteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/method_button" />

</androidx.constraintlayout.widget.ConstraintLayout>