<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginHorizontal="15dp"
    android:background="@drawable/order_status_background"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/req_list_card"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/desc_symbolIV"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:background="@drawable/shopping_cart_background"
                                android:src="@drawable/ic_shopping_cart" />

                        </RelativeLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:gravity="center|right"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/req_descriptionTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/avenir"
                                android:text="@string/requierement_desc"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/recommender_personTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/avenir"
                                android:text="@string/added_by"
                                android:textColor="@color/shadow_text"
                                android:textSize="14sp" />

                        </LinearLayout>


                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:gravity="center">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="122dp"
                            android:layout_height="55dp"
                            android:background="@drawable/order_status_background"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/order_statusTv"
                                android:layout_width="52dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp"
                                android:fontFamily="@font/avenir"
                                android:gravity="center"
                                android:text="@string/waiting"
                                android:textColor="@color/light_black"
                                android:textSize="14sp" />

                            <ImageView
                                android:id="@+id/order_status_icon"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:layout_marginStart="17dp"
                                android:background="@drawable/bekliyor" />


                        </LinearLayout>


                    </RelativeLayout>


                </RelativeLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>